# ExifBased_namer

./: .gitignore  API_SPEC.md  DESIGN.md  IPC_SPEC.md  PLAN.md  README.md  build.bat  build.ps1  build.spec  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  classify.py  normalize_novelai.py  preset_io.py  progress.py  search.py  tag_extract.py  tag_sets.py  value_conflicts.py  worker.py
core/adapters/: legacy.py  nais.py
core/db/: query.py  schema.py  storage.py
core/extract/: __init__.py  payload.py  (+1 more)
db/: schema.sql
debug/: db_smoke.py  inspect_exif.py  ipc_echo.py  perf_db.py  perf_extract.py  thumb_cache.py
docs/: DEV_GUIDE.md  STRUCTURE.md  USER_GUIDE.md
gui/: app.py  common.py  editor_tab.py  log_tab.py  move_tab.py  rename_tab.py  result_view.py  search_tab.py  sidecar_client.py  state.py  tasks.py
nais_builder/: __init__.py  builder.py
server/: context.py  main.py
sidecar/: __init__.py  emitter.py  job_manager.py  jobs.py  main.py  scan.py
tests/: build_nais_dragdrop.py  conftest.py  run_tests.py  test_db.py  test_extract.py  test_import_export.py  test_ipc_emitter.py  test_match.py  test_normalize.py  test_schema.py  test_tag_sets.py
ui/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.mts
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: main-window.json
ui/src-tauri/permissions/: commands.toml
ui/src-tauri/src/: main.rs
viewer-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
(+71 files in other folders)
