[package]
name = "nai_tag_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
